<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:background="#CC000000"
              android:layoutDirection="ltr"
              android:orientation="vertical">

   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal"
           android:paddingTop="4dp">

      <ImageButton
              android:id="@id/exo_prev"
              style="@style/ExoMediaButton.Previous" />

      <ImageButton
              android:id="@id/exo_rew"
              style="@style/ExoMediaButton.Rewind" />

      <ImageButton
              android:id="@id/exo_repeat_toggle"
              style="@style/ExoMediaButton" />

      <ImageButton
              android:id="@id/exo_play"
              style="@style/ExoMediaButton.Play" />

      <ImageButton
              android:id="@id/exo_pause"
              style="@style/ExoMediaButton.Pause" />

      <ImageButton
              android:id="@id/exo_ffwd"
              style="@style/ExoMediaButton.FastForward" />

      <ImageButton
              android:id="@id/exo_next"
              style="@style/ExoMediaButton.Next" />

   </LinearLayout>

   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="4dp"
           android:gravity="center_vertical"
           android:orientation="horizontal">

      <TextView
              android:id="@id/exo_position"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:includeFontPadding="false"
              android:paddingLeft="4dp"
              android:paddingRight="4dp"
              android:textColor="#FFBEBEBE"
              android:textSize="14sp"
              android:textStyle="bold" />

      <com.google.android.exoplayer2.ui.DefaultTimeBar
              android:id="@id/exo_progress"
              android:layout_width="0dp"
              android:layout_height="26dp"
              android:layout_weight="1" />

      <TextView
              android:id="@id/exo_duration"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:includeFontPadding="false"
              android:paddingLeft="4dp"
              android:paddingRight="4dp"
              android:textColor="#FFBEBEBE"
              android:textSize="14sp"
              android:textStyle="bold" />

      <FrameLayout
              android:id="@+id/exo_fullscreen_button"
              android:layout_width="32dp"
              android:layout_height="wrap_content"
              android:layout_gravity="right">

         <ImageView
                 android:id="@+id/exo_fullscreen_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_fullscreen_expand" />

      </FrameLayout>

   </LinearLayout>

</LinearLayout>