...
            android:id="@+id/imgThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:src="@drawable/play" />

...
